<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:text="Adviser App"
            android:textColor="@android:color/white"
            android:layout_marginBottom="50dp"/>

        <com.kthdv.adviserapp.common.ClearableEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_space_bottom"
            android:hint="@string/email"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/transparent_white"
            android:textSize="@dimen/font_size_18dp"
            app:clearButtonDrawable="@drawable/ic_close_white"
            app:edtBackground="@drawable/round_border_edit_text"
            app:edtIcon="@drawable/ic_user"
            android:text="covanhoctap"/>

        <com.kthdv.adviserapp.common.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_space_bottom"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHint="@color/transparent_white"
            android:textSize="@dimen/font_size_18dp"
            app:edtBackground="@drawable/round_border_edit_text"
            app:edtIcon="@drawable/ic_key"
            app:toggleButtonDrawable="@drawable/password_toggle_button_drawable"
            android:text="123456"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_space_bottom"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_have_account"
                android:textSize="@dimen/font_size_16dp" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/register"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/font_size_16dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


