<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_screen"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/input_field_margin_side"
            android:paddingLeft="@dimen/input_field_margin_side"
            android:paddingRight="@dimen/input_field_margin_side"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="Adviser Registration"
                android:textSize="30dp"
                android:layout_marginBottom="30dp"/>

            <com.kthdv.adviserapp.common.ClearableEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text"
                android:textSize="@dimen/font_size_18dp"
                android:textColorHint="@color/transparent_white"
                android:textColor="@android:color/white"
                android:layout_marginBottom="@dimen/edit_text_space_bottom"
                app:clearButtonDrawable="@drawable/ic_close_white"
                app:edtBackground="@drawable/round_border_edit_text"
                app:edtIcon="@drawable/ic_name" />

            <com.kthdv.adviserapp.common.ClearableEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_space_bottom"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="@dimen/font_size_18dp"
                android:textColorHint="@color/transparent_white"
                android:textColor="@android:color/white"
                app:clearButtonDrawable="@drawable/ic_close_white"
                app:edtBackground="@drawable/round_border_edit_text"
                app:edtIcon="@drawable/ic_user" />

            <com.kthdv.adviserapp.common.PasswordEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_space_bottom"
                android:hint="@string/password"
                android:textSize="@dimen/font_size_18dp"
                android:textColorHint="@color/transparent_white"
                android:textColor="@android:color/white"
                app:edtBackground="@drawable/round_border_edit_text"
                app:edtIcon="@drawable/ic_key"
                app:toggleButtonDrawable="@drawable/password_toggle_button_drawable" />

            <com.kthdv.adviserapp.common.PasswordEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_space_bottom"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/font_size_18dp"
                android:textColorHint="@color/transparent_white"
                android:textColor="@android:color/white"
                app:edtBackground="@drawable/round_border_edit_text"
                app:edtIcon="@drawable/ic_key"
                app:toggleButtonDrawable="@drawable/password_toggle_button_drawable" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_space_bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textSize="@dimen/font_size_16dp" />

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/login"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/font_size_16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TransparentActionBar" />
</RelativeLayout>